--- a/styles/base.css
+++ b/styles/base.css
@@ -103,6 +103,7 @@ body {
     -webkit-text-rendering: optimizeLegibility;
     text-rendering: optimizeLegibility;
     text-size-adjust: none;
+    -webkit-text-size-adjust: none;
 }
 
 ul {
