Make navigation sticky when scroll

--- a/styles/media-query.css
+++ b/styles/media-query.css
@@ -28,6 +28,15 @@
         font-size: 50%; /* 8px */
     }
 
+    /* ---------- Nav---------- */
+    .nav__links {
+        display: none;
+    }
+
+    .nav__cta-btn {
+        display: none;
+    }
+
     /* ---------- Advantages Section ---------- */
 
     .row.advantages-section__content {
