--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,12 +1,27 @@
 /* ---------- Top Navigation ---------- */
 
+.nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: var(--white);
+    height: var(--spacing-12);
+    width: 100%;
+}
+
+.sticky {
+    position: sticky;
+    position: -webkit-sticky;
+    top: 0;
+    z-index: 999;
+    box-shadow: 0 1px 5px var(--blue-10);
+}
+
 .nav__content {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: var(--spacing-14);
+    width: 100%;
 }
 
 .nav__logo {
