--- a/styles/media-query.css
+++ b/styles/media-query.css
@@ -37,6 +37,64 @@
         display: none;
     }
 
+    /* ---------- Mobile-Nav---------- */
+
+    #menu-icon {
+        display: block;
+        height: 4.1rem;
+        width: auto;
+    }
+
+    #close-icon {
+        height: 2.5rem;
+    }
+
+    .mobile-nav {
+        display: block;
+        position: fixed;
+        height: 100vh;
+        width: 100%;
+        background-color: var(--white);
+        top: 0;
+        left: 0;
+        pointer-events: none;
+        z-index: 1000;
+        cursor: pointer;
+    }
+
+    .mobile-nav__header {
+        height: var(--spacing-12);
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .mobile-nav__links {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        -webkit-transform: translate(-50%, -50%);
+        -moz-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        -o-transform: translate(-50%, -50%);
+        display: flex;
+        flex-direction: column;
+        gap: var(--spacing-7);
+        align-items: center;
+    }
+
+    .mobile-nav__link {
+        font-size: var(--font-size-7);
+        font-weight: var(--font-weight-400);
+        line-height: var(--spacing-7);
+        color: var(--text-color-30);
+    }
+
+    .mobile-nav__cta {
+        text-align: center;
+    }
+
     /* ---------- Advantages Section ---------- */
 
     .row.advantages-section__content {
