--- a/styles/styles.css
+++ b/styles/styles.css
@@ -34,6 +34,16 @@
     gap: var(--spacing-7);
 }
 
+/* Mobile */
+
+.mobile-nav {
+    display: none;
+}
+
+#menu-icon {
+    display: none;
+}
+
 /* ---------- Header ---------- */
 
 #header {
