--- a/styles/media-query.css
+++ b/styles/media-query.css
@@ -41,6 +41,7 @@
 
     #menu-icon {
         display: block;
+        cursor: pointer;
         height: 4.1rem;
         width: auto;
     }
@@ -52,12 +53,20 @@
     .mobile-nav {
         position: fixed;
         height: 100vh;
-        width: 100%;
         background-color: var(--white);
         top: 0;
-        left: 0;
+        right: 0;
         z-index: 1000;
         cursor: pointer;
+        transition: all 0.3s;
+        -webkit-transition: all 0.3s;
+        -moz-transition: all 0.3s;
+        -ms-transition: all 0.3s;
+        -o-transition: all 0.3s;
+    }
+
+    .mobile-nav--show {
+        width: 100%;
     }
 
     .mobile-nav__header {
