--- a/styles/styles.css
+++ b/styles/styles.css
@@ -39,6 +39,18 @@
 .mobile-nav {
     width: 0%;
     overflow: hidden;
+    position: fixed;
+    height: 100vh;
+    background-color: var(--white);
+    top: 0;
+    right: 0;
+    z-index: 1000;
+    cursor: pointer;
+    transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    -o-transition: all 0.3s;
 }
 
 #menu-icon {
